--- a/WoD20-full.html
+++ b/WoD20-full.html
@@ -2,7 +2,7 @@
 	<div class="main-container">
 		<div class="header logo-div"></div>
 		<div class="navigation">
-			<button class="tabbutton" style="margin-left: 0.25em" type="action" name="act_primary">Primary</button>
+			<button class="tabbutton" style="margin-left: 0.25em" type="action" name="act_primary" data-i18n="Primary">Primary</button>
 			<button class="tabbutton" type="action" name="act_backgrounds">Backgrounds</button>
 			<button class="tabbutton" type="action" name="act_meritsflaws">Merits&amp;Flaws</button>
 			<button class="tabbutton" type="action" name="act_powers">Powers</button>
