--- a/WoD20-full.html
+++ b/WoD20-full.html
@@ -1684,13 +1684,13 @@
 							<option value="6" data-i18n="6Legend">6 - Legend</option>
 						</div>
 						<div class="rank element-chbreed element-corax"><select class="select-trait" name="attr_rank">
-							<option value="0" selected>0 - Cub</option>
-							<option value="1" data-i18n="1">1 - Oviculum</option>
-							<option value="2">2 - Neocornix</option>
-							<option value="3">3 - Ales</option>
-							<option value="4">4 - Volucris</option>
-							<option value="5">5 - Corvus</option>
-							<option value="6">6 - Legend</option>
+							<option value="0" selected data-i18n="0Cub">0 - Cub</option>
+							<option value="1" data-i18n="1Oviculum">1 - Oviculum</option>
+							<option value="2" data-i18n="2Neocornix">2 - Neocornix</option>
+							<option value="3" data-i18n="3Ales">3 - Ales</option>
+							<option value="4" data-i18n="4Volucris">4 - Volucris</option>
+							<option value="5" data-i18n="5Corvus">5 - Corvus</option>
+							<option value="6" data-i18n="6Legend">6 - Legend</option>
 						</div>
 						<div class="rank element-chbreed element-gurahl"><select class="select-trait" name="attr_rank">
 							<option value="0" selected>0 - Cub</option>
