Corrected translation files
+ added missing "Boons"

--- a/WoD20-full.html
+++ b/WoD20-full.html
@@ -10842,7 +10842,7 @@
 				<input type="hidden" class="bonds" name="attr_journ-bonds" value="0" />
 				<input type="hidden" class="vinculum" name="attr_journ-vinculum" value="0" />
 				<div class="half-column boons">
-					<div class="line-heading"><span class="line-heading">Boons</span></div>
+					<div class="line-heading"><span class="line-heading" data-i18n="Boons">Boons</span></div>
 					<div class="row-full">
 						<div class="journal-field"><span data-i18n="Debtor">Debtor</span></div>
 						<div class="journal-field"><span data-i18n="ToWhom">To Whom</span></div>
